--- a/mama-recipe-mobile.html
+++ b/mama-recipe-mobile.html
@@ -101,19 +101,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\mama-recipe-mobile\Slide1.PNG" alt="">
+                  <img src="assets\img\portfolio\mama-recipe-mobile\Slide1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\mama-recipe-mobile\Slide2.PNG" alt="">
+                  <img src="assets\img\portfolio\mama-recipe-mobile\Slide2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\mama-recipe-mobile\Slide3.PNG" alt="">
+                  <img src="assets\img\portfolio\mama-recipe-mobile\Slide3.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\mama-recipe-mobile\Slide4.PNG" alt="">
+                  <img src="assets\img\portfolio\mama-recipe-mobile\Slide4.png" alt="">
                 </div>
 
               </div>
